[package]
name = "webmachine-rust"
version = "0.3.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Port of the Ruby Webmachine library to Rust"
documentation = "http://www.pact.io/reference/rust/webmachine-rust-0.1.0/webmachine_rust/"
homepage = "https://github.com/uglyog/webmachine-rust"
repository = "https://github.com/uglyog/webmachine-rust"
readme = "README.md"
keywords = ["webmachine"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"

[dev-dependencies]
expectest = "0.12.0"
