[package]
name = "webmachine-rust"
version = "0.6.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Port of the Ruby Webmachine library to Rust"
homepage = "https://github.com/rholshausen/webmachine-rust"
repository = "https://github.com/rholshausen/webmachine-rust"
readme = "README.md"
keywords = ["webmachine"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.86"
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
expectest = "0.12.0"
test-log = "0.2.17"
