[package]
name = "webmachine-rust"
version = "0.6.4"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Port of the Ruby Webmachine library to Rust"
homepage = "https://github.com/rholshausen/webmachine-rust"
repository = "https://github.com/rholshausen/webmachine-rust"
readme = "README.md"
keywords = ["webmachine"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
expectest = "0.12.0"
test-log = "0.2.19"
